--- a/public_src/index.jade
+++ b/public_src/index.jade
@@ -5,7 +5,7 @@ html(ng-app="newshub")
 	meta(name="Description", content="a simple post and reply app")
 	meta(http-equiv="X-UA-Compatible", content="IE=edge")
 	meta(name="viewport", content="width=device-width")
-	link(href="components/css/bootstrap.min.css", rel="stylesheet")
+	link(href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css", rel="stylesheet")
 	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 	<!--[if lt IE 9]>
@@ -15,9 +15,9 @@ html(ng-app="newshub")
 
 	include stylesheets/stylesheets.jade
 
-	script(src="components/js/angular.min.js")
-	script(src="components/js/angular-route.min.js")
-	script(src="components/js/angular-cookies.min.js")
+	script(src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js")
+	script(src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular-route.min.js")
+	script(src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular-cookies.min.js")
 	
 	include scripts/scripts.jade
 	
